# Rust-React-Sample-Project

./: Dockerfile  README.md  docker-compose.devlocal.yml  docker-compose.yml
backend/: .gitignore  Cargo.toml
backend/src/: api.rs  main.rs  webclient.rs
backend/src/api/: controller.rs
backend/src/api/controller/: some_controller.rs
backend/src/webclient/: app.rs
backend/src/webclient/page/: app.rs
backend/templates/: app.html
frontend/: package.json  tsconfig.json  webpack.config.js
frontend/src/: bootstrap.tsx
frontend/src/spa/: index.tsx
