[package]
name = "demoapp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demoapp"
path = "src/main.rs"

[dependencies]
# Web router
actix-web = { version = "4" }
actix-files = "0.6"
# HTML templates
askama = "0.12"
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
# Async utilities
tokio = "1.29"
crossbeam = "0.8"